--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,7 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 numpy==1.20.2
 opencv-python==4.5.1.48
+pdf2image==1.14.0
+Pillow==8.1.2
 SQLAlchemy==1.4.3
 Werkzeug==1.0.1
