--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 astroid==2.5.1
 autopep8==1.5.6
+cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
@@ -9,9 +10,16 @@ decord==0.5.2
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
+google-api-core==1.26.2
+google-api-python-client==2.0.2
+google-auth==1.28.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.53.0
 greenlet==1.0.0
+httplib2==0.19.0
 idna==2.10
 imageio==2.9.0
+imageio-ffmpeg==0.4.3
 isort==5.8.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -21,18 +29,28 @@ lazy-object-proxy==1.6.0
 MarkupSafe==1.1.1
 matplotlib==3.4.0
 mccabe==0.6.1
+moviepy==1.0.3
 networkx==2.5
 numpy==1.20.2
 opencv-python==4.5.1.48
+packaging==20.9
 pdf2image==1.14.0
 Pillow==8.1.2
+proglog==0.1.9
+progressbar2==3.53.1
+protobuf==3.15.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.7.0
 pylint==2.7.2
 pyparsing==2.4.7
 pytesseract==0.3.7
 python-dateutil==2.8.1
+python-utils==2.5.6
+pytz==2021.1
 PyWavelets==1.1.1
 requests==2.25.1
+rsa==4.7.2
 scikit-image==0.18.1
 scikit-learn==0.24.1
 scipy==1.6.2
@@ -43,6 +61,8 @@ tesseract==0.1.3
 threadpoolctl==2.1.0
 tifffile==2021.3.17
 toml==0.10.2
+tqdm==4.59.0
+uritemplate==3.0.1
 urllib3==1.26.4
 Werkzeug==1.0.1
 wrapt==1.12.1
